--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -52,6 +52,25 @@ background-color: rgba(229, 0, 0, 0.883)!important;
  box-shadow: none  !important;
 }
 
+.btn-outline-progas {
+    /* background-color: rgb(247, 47, 47) !important; */
+ color:rgba(255, 245, 0, 0.8) !important;
+ border-color:  rgba(255, 245, 0, 0.8) !important;
+ padding-left: 3px;
+ /* font-weight: bold; */
+}
+
+.btn-outline-progas:hover {
+    color: #2c3e50!important;
+background-color: rgba(255, 245, 0, 0.8) !important;
+}
+
+.btn-outline-progas:focus {
+ outline: none  !important;
+ box-shadow: none  !important;
+}
+
+
 .text-left{
     text-align: left;
 }
