fixed css wpisywanie dodatkow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -58,7 +58,7 @@ background-color: rgba(229, 0, 0, 0.883)!important;
     /* background-color: rgb(247, 47, 47) !important; */
  color:rgba(255, 245, 0, 0.8) !important;
  border-color:  rgba(255, 245, 0, 0.8) !important;
- padding-left: 3px;
+ /* padding-left: 3px; */
  /* font-weight: bold; */
 }
 
